--- a/app/demo/src/sass/a.scss
+++ b/app/demo/src/sass/a.scss
@@ -2,7 +2,7 @@
 * @Author: zhangxinliang
 * @Date:   2016-07-04 16:10:45
 * @Last Modified by:   zhangxinliang
-* @Last Modified time: 2016-07-04 19:19:32
+* @Last Modified time: 2016-07-05 11:30:18
 */
 .test-box {
 	background-color: #FFF;
@@ -15,4 +15,7 @@ body {
 	width: 100%;
 	height: 100%;
 	background-color: red;
+}
+div {
+	display: flex;
 }
