--- a/app/html/src/css/ul.css
+++ b/app/html/src/css/ul.css
@@ -2,7 +2,7 @@
 * @Author: zhangxinliang
 * @Date:   2016-07-05 13:46:23
 * @Last Modified by:   zhangxinliang
-* @Last Modified time: 2016-07-05 14:48:12
+* @Last Modified time: 2016-07-05 16:08:14
 */
 * {
 	margin: 0;
@@ -17,7 +17,7 @@ body {
 	display: flex;
 	align-items: center; 
 	justify-content: center;
-	font-family: Microsoft YaHei;
+	font-family: "Microsoft YaHei";
 	background-color: #EEE;
 }
 .book-list-box {
