--- a/app/demo/src/sass/a.scss
+++ b/app/demo/src/sass/a.scss
@@ -4,6 +4,8 @@
 * @Last Modified by:   zhangxinliang
 * @Last Modified time: 2016-07-05 11:30:18
 */
+@import "./model/color.scss";
+
 .test-box {
 	background-color: #FFF;
 	.test-btn {
@@ -18,4 +20,9 @@ body {
 }
 div {
 	display: flex;
+}
+.test {
+	display: flex;
+	align-items: center;
+	color: $gray;
 }
