--- a/app/edu/src/sass/base/_reset.scss
+++ b/app/edu/src/sass/base/_reset.scss
@@ -1,19 +1,153 @@
-html,body,h1,h2,h3,h4,h5,h6,div,dl,dt,dd,ul,ol,li,p,blockquote,pre,hr,figure,table,caption,th,td,form,fieldset,legend,input,button,textarea,menu{margin:0;padding:0;}
-header,footer,section,article,aside,nav,hgroup,address,figure,figcaption,menu,details{display:block;}
-table{border-collapse:collapse;border-spacing:0;}
-caption,th{text-align:left;font-weight:normal;}
-html,body,fieldset,img,iframe,abbr{border:0;}
-i,cite,em,var,address,dfn{font-style:normal;}
-[hidefocus],summary{outline:0;}
-li{list-style:none;}
-h1,h2,h3,h4,h5,h6,small{font-size:100%;}
-sup,sub{font-size:83%;}
-pre,code,kbd,samp{font-family:inherit;}
-q:before,q:after{content:none;}
-textarea{overflow:auto;resize:none;}
-label,summary{cursor:default;}
-a,button{cursor:pointer;}
-h1,h2,h3,h4,h5,h6,em,strong,b{font-weight:bold;}
-del,ins,u,s,a,a:hover{text-decoration:none;}
-body,textarea,input,button,select,keygen,legend{font:12px/normal arial,\5b8b\4f53;color:#333;outline:0;}
-body{background:#fff;}
+blockquote,
+body,
+button,
+caption,
+dd,
+div,
+dl,
+dt,
+fieldset,
+figure,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+html,
+input,
+legend,
+li,
+menu,
+ol,
+p,
+pre,
+table,
+td,
+textarea,
+th,
+ul {
+    margin: 0;
+    padding: 0;
+}
+address,
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+caption,
+th {
+    text-align: left;
+    font-weight: normal;
+}
+abbr,
+body,
+fieldset,
+html,
+iframe,
+img {
+    border: 0;
+}
+address,
+cite,
+dfn,
+em,
+i,
+var {
+    font-style: normal;
+}
+[hidefocus],
+summary {
+    outline: 0;
+}
+li {
+    list-style: none;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+small {
+    font-size: 100%;
+    line-height: 1em;
+}
+sub,
+sup {
+    font-size: 83%;
+}
+code,
+kbd,
+pre,
+samp {
+    font-family: inherit;
+}
+q:after,
+q:before {
+    content: none;
+}
+textarea {
+    overflow: auto;
+    resize: none;
+}
+label,
+summary {
+    cursor: default;
+}
+a,
+button {
+    cursor: pointer;
+}
+button {
+    display: inline-block;
+    border: none;
+}
+b,
+em,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+strong {
+    font-weight: bold;
+}
+a,
+a:hover,
+del,
+ins,
+s,
+u {
+    text-decoration: none;
+}
+body,
+button,
+input,
+keygen,
+legend,
+select,
+textarea {
+    font: 14px/normal "Microsoft YaHei","Arial";
+    color: #333;
+    outline: 0;
+}
+body {
+    background: #fff;
+}
