--- a/app/edu/src/sass/index.scss
+++ b/app/edu/src/sass/index.scss
@@ -1,16 +1,8 @@
-@import './base/_reset.scss';
-
-$green_21: #21a557;
-$green_39: #39a030;
-
-@mixin icon ($w: 10px, $h: 10px, $url: '') {
-    display: inline-block;
-    width: $w;
-    height: $h;
-    background-image: url($url);
-}
+@import './base/_reset';
+@import './base/_base';
 
 .g-msg {
+    display: none;
     padding-top: 12px;
     padding-bottom: 6px;
     background-color: #f3f3f3;
@@ -18,12 +10,18 @@ $green_39: #39a030;
 .g-hd {
     padding-top: 30px;
     padding-bottom: 37px;
+    @media screen and (max-width: 1205px) {
+        padding-top: 20px;
+        padding-bottom: 27px;
+    }
 }
 .g-bd {
 
 }
 .g-ft {
-
+    padding-top: 80px;
+    padding-bottom: 75px;
+    background-color: #2c3339;
 }
 .g-box {
     width: 1205px;
@@ -33,20 +31,18 @@ $green_39: #39a030;
       width: 957px;
     }
 }
-
-.f-fix {
-    &:before,
-    &:after {
-        content: "";
-        display: table;
-    }
-    &.after {
-        clear: both;
-    }
+.g-wrap {
+    background-color: $gray_f8;
 }
 
-.z-hide {
-    display: none;
+.f-fl {
+    float: left;
+}
+.f-fr {
+    float: right;
+}
+.f-fix {
+    @include clean-fix;
 }
 
 .m-msg {
@@ -90,21 +86,589 @@ $green_39: #39a030;
 }
 
 .m-attention {
+    display: inline-block;
     font-size: 0;
     .m-logo {
         display: inline-block;
         margin-right: 34px;
     }
-    > button {
+    > .at-btn {
         width: 54px;
         height: 21px;
         vertical-align: top;
         color: #fff;
         background-color: $green_21;
         border-radius: 2px;
+        &.z-hide {
+            display: none;
+        }
+        i {
+            @include icon(8px, 8px, '../img/icon_add.png');
+            margin-right: 6px;
+        }
     }
+    .has-at {
+        display: inline-block;
+        width: 104px;
+        height: 19px;
+        vertical-align: top;
+        font-size: 0;
+        border: 1px solid $gray_ef;
+        background-color: $gray_f8;
+        &.z-hide {
+            display: none;
+        }
+        > .icon {
+            @include icon(11px, 9px, '../img/icon_confirm.png');
+            margin-left: 6px;
+            margin-right: 5px;
+        }
+        > em {
+            margin-right: 10px;
+            font-size: 12px;
+            font-weight: normal;
+            line-height: 19px;
+        }
+        > a {
+            padding-left: 8px;
+            font-size: 12px;
+            line-height: 19px;
+            color: #999;
+            border-left:1px solid #ccc;
+            &:hover {
+                color: $green_21;
+                text-decoration: underline;
+            }
+        }
+    }
+}
+
+.m-nav {
+    float: right;
+    font-size: 0;
+    > a {
+        margin-right: 55px;
+        vertical-align: middle;
+        font-size: 16px;
+        color: #666;
+        &:hover {
+            color: $green_21;
+        }
+        &:nth-last-child(2) {
+            margin-right: 30px;
+        }
+    }
+    .more {
+        @include icon(19px, 19px, '../img/icon_magnifier.png');
+        vertical-align: middle;
+        cursor: pointer;
+        &:hover {
+            @include icon(19px, 19px, '../img/icon_magnifier_hover.png');
+        }
+    }
+}
+
+.m-carousel {
+    position: relative;
+    width: 100%;
+    height: 460px;
+    min-width: 957px;
+    > a {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-position: top center;
+        background-size: cover;
+        opacity: 0;
+    }
+    .pointers {
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        transform: translate(-50%, 0);
+        font-size: 0;
+        > li {
+            display: inline-block;
+            width: 10px;
+            height: 10px;
+            margin-right: 11px;
+            border-radius: 50%;
+            background-color: #fff;
+            cursor: pointer;
+            transition: background-color .5s ease-in;
+            &.z-sel {
+                background-color: #333;
+            }
+            &:last-child {
+                margin-right: 0;
+            }
+        }
+    }
+}
+
+.m-info{
+    display: inline-block;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    margin-right: 84px;
+    .ic-box {
+        display: inline-block;
+        width: 80px;
+        height: 80px;
+        margin-top: 6px;
+        margin-right: 20px;
+        vertical-align: top;
+        background-color: $green_39;
+        border-radius: 50%;
+        > img {
+            position: relative;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    }
+    .info-box {
+        display: inline-block;
+        width: 238px;
+        .tt {
+            font-size: 22px;
+            font-weight: 500;
+        }
+        .ct {
+            margin-top: 20px;
+            margin-bottom: 35px;
+            line-height: 24px;
+            color: #666;
+        }
+        > a {
+            color: $green_21;
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+    }
+    @media screen and (max-width: 1205px) {
+        margin-right: 42px;
+        padding-top: 30px;
+        padding-bottom: 30px;
+        .info-box {
+            width: 184px;
+        }
+    }
+}
+.m-info-last {
+    margin-right: 0;
+}
+
+.m-work {
+    overflow: hidden;
+    padding-top: 2px;
+    margin-left: auto;
+    margin-right: auto;
+    .img-box {
+        position: relative;
+        margin-left: calc(50% - 808px);
+        width: 1600px;
+        font-size: 0;
+        > img {
+            width: 320px;
+            height: 220px;
+            box-sizing: border-box;
+            padding-right: 4px;
+            &:last-child {
+                padding-right: 0px;
+            }
+        }
+    }
+    @media screen and (max-width: 1205px) {
+        min-width: 957px;
+        .img-box {
+            width: 1500px;
+            margin-left: calc(50% - 750px);
+            > img {
+                width: 300px;
+                height: 206px;
+            }
+        }
+    }
+}
+
+.m-fill {
+    padding-top: 80px;
+    padding-bottom: 120px;
+}
+
+.m-tab {
+    font-size: 0;
+    margin-bottom: 20px;
+    > li {
+        display: inline-block;
+        vertical-align: top;
+        width: 200px;
+        height: 50px;
+        font-size: 20px;
+        text-align: center;
+        line-height: 50px;
+        background-color: #fff;
+        box-shadow: 1px 1px 1px #d4d3d3;
+        cursor: pointer;
+        &.z-sel {
+            color: #fff;
+            background-color: $green_39;
+        }
+    }
+}
+
+.m-lst {
+    width: 962px;
+    min-height: 500px;
+    // max-height: 1250px;
+    @include clean-fix;
+    @media screen and (max-width: 1205px) {
+        width: 717px;
+    }
+    > li {
+        position: relative;
+        float: left;
+        width: 227px;
+        height: 230px;
+        box-sizing: border-box;
+        margin-right: 18px;
+        margin-bottom: 20px;
+        border: 1px solid #e6e6e6;
+        background-color: #fff;
+        > img {
+            display: block;
+            padding: 1px;
+            width: 223px;
+            height: 124px;
+        }
+        .info {
+            padding-left: 5px;
+            padding-right: 5px;
+            margin-top: 9px;
+            font-size: 12px;
+            > p {
+                margin-bottom: 10px;
+                line-height: 12px;
+                @include ellipsis;
+            }
+            .author,
+            .u-learnning {
+                color: #999;
+            }
+            .u-learnning {
+                padding-left: 2px;
+                padding-right: 2px;
+                border: 1px solid #ddd;
+                border-radius: 3px;
+            }
+            .price {
+                display: block;
+                margin-top: 10px;
+                color: #ff3f00;
+            }
+        }
+        .hover-box {
+            display: none;
+            position: absolute;
+            top: -11px;
+            left: -11px;
+            z-index: 2;
+            width: 480px;
+            // height: 238px;
+            box-sizing: border-box;
+            border: 1px solid #c1c0c0;
+            box-shadow: 1px 1px 1px #c1c0c0;
+            .top  {
+                padding: 11px 11px 20px;
+                background-color: #fff;
+                @include clean-fix;
+            }
+            .bottom {
+                padding: 16px 21px;
+                background-color: #f8f8f8;
+            }
+            .hover-img {
+                float: left;
+                width: 223px;
+                height: 124px;
+            }
+            .info-box {
+                float: right;
+                width: 215px;
+                > h6 {
+                    font-size: 18px;
+                    @include ellipsis;
+                }
+                > p {
+                    font-size: 12px;
+                    line-height: 20px;
+                    color: #666;
+                }
+                .u-learnning {
+                    margin-top: 15px;
+                    margin-bottom: 10px;
+                }
+            }
+            .desc {
+                line-height: 24px;
+                word-break: break-all;
+                color: #666;
+            }
+            &:hover {
+                display: block;
+            }
+        }
+        &:hover {
+            .hover-box {
+                display: block;
+            }
+        }
+        @media screen and (min-width: 1205px) {
+            &:nth-child(4n) {
+                margin-right: 0;
+            }
+        }
+        @media screen and (max-width: 1205px) {
+            &:nth-child(3n) {
+                margin-right: 0;
+            }
+        }
+    }
+}
+
+.u-learnning {
+    line-height: 17px;
     .icon {
-        @include icon(8px, 8px, '../img/icon_add.png');
-        margin-right: 6px;
+        vertical-align: top;
+        @include icon(14px, 17px, '../img/icon_people.png');
+    }
+}
+
+.m-asd {
+    float: right;
+    width: 223px;
+    border: 1px solid #ddd;
+    margin-bottom: 20px;
+    background-color: #fff;
+    > .tt {
+        padding: 20px;
+        font-size: 16px;
+        line-height: 16px;
+        border-bottom: 1px solid #ddd;
+    }
+    > .ct {
+        padding: 20px;
+    }
+}
+
+.u-video {
+    position: relative;
+    margin-top: 5px;
+    cursor: pointer;
+    > img {
+        width: 180px;
+        height: 110px;
+    }
+    .play-icon {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-top: -23px;
+        margin-left: -23px;
+        @include icon(46px, 46px, '../img/icon_video_play.png');
+
+    }
+}
+
+.m-top {
+    max-height: 700px;
+    overflow: hidden;
+    > li {
+        margin-bottom: 20px;
+        @include clean-fix;
+        > img {
+            float: left;
+            width: 50px;
+            height: 50px;
+        }
+        .box {
+            float: right;
+            width: 120px;
+            > p {
+                margin-bottom: 10px;
+                @include ellipsis;
+            }
+            .u-learnning {
+                color: #999;
+            }
+        }
+    }
+}
+
+.m-page {
+    > * {
+        display: inline-block;
+    }
+    .btns {
+        width: 30px;
+        height: 20px;
+        line-height: 20px;
+        text-align: center;
+        color: #fff;
+        background-color: #9dd8b1;
+        &:last-child {
+            margin-left: 10px;
+        }
+    }
+    .links,
+    .omit,
+    .curr {
+        width: 20px;
+        height: 20px;
+        text-align: center;
+        line-height: 20px;
+        margin-left: 10px;
+    }
+    .links {
+        color: #666;
+        &:hover {
+            color: #fff;
+            background-color: #9dd8b1;
+        }
+    }
+    .curr {
+        color: $green_39;
+    }
+}
+
+.m-cprt {
+    float: left;
+    padding-left: 50px;
+    .m-logo {
+        margin-bottom: 20px;
+    }
+    > p {
+        font-size: 12.5px;
+        line-height: 27px;
+        color: #fff;
+    }
+}
+
+.m-links {
+    float: left;
+    margin-right: 70px;
+    > p {
+        margin-bottom: 15px;
+        font-size: 12px;
+        color: #fff;
+    }
+    > a {
+        display: block;
+        margin-bottom: 15px;
+        color: #fff;
+        &:hover {
+            text-decoration: underline;
+        }
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+}
+.m-links-last {
+    margin-right: 0;
+}
+
+.u-weibo {
+    float: right;
+    margin-left: 10px;
+    @include icon(20px, 16px, '../img/icon_weibo.png');
+}
+
+.m-login {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .6);
+    .box {
+        position: relative;
+        top: 50%;
+        left: 50%;
+        width: 388px;
+        height: 288px;
+        box-sizing: border-box;
+        margin-left: -194px;
+        margin-top: -144px;
+        padding: 30px 40px;
+        background-color: #fff;
+        > h5 {
+            font-size: 18px;
+            margin-bottom: 20px;
+        }
+        > input {
+            width: 100%;
+            box-sizing: border-box;
+            height: 45px;
+            padding-left: 9px;
+            padding-right: 9px;
+            border: 1px solid #dfdfdf;
+            box-shadow: 1px 1px 2px #d5e3da inset;
+            margin-bottom: 15px;
+        }
+        > button {
+            display: block;
+            width: 100%;
+            height: 45px;
+            margin-top: 15px;
+
+            text-align: center;
+            color: #fff;
+            background-color: #2ab14f;
+            box-shadow: 2px 1px 2px #d5e3da;
+        }
+        > .close {
+            position: absolute;
+            top: 10px;
+            right: 8px;
+            @include icon(17px, 16px, '../img/icon_login_close.png');
+            cursor: pointer;
+        }
+    }
+}
+
+.m-video {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .6);
+    .box {
+        position: relative;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        box-sizing: border-box;
+        width: 880px;
+        padding: 30px 30px;
+        background-color: #fff;
+        > h5 {
+            font-size: 18px;
+            margin-bottom: 20px;
+        }
+        > video {
+            width: 820px;
+            height: 495px;
+        }
+        > .close {
+            position: absolute;
+            top: 10px;
+            right: 8px;
+            @include icon(17px, 16px, '../img/icon_login_close.png');
+            cursor: pointer;
+        }
     }
 }
